--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
         <script>
             $(document).ready(function(){
                 $.get("https://api.github.com/users/mortezaipo/repos", function(data) {
-                    projects = JSON.parse(data);
+                    //projects = JSON.parse(data);
                     var project_list = $("#projects tbody");
                     jQuery.each(projects, function(i, v) {
                         project_list.append(
