--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
         <script>
             $(document).ready(function(){
                 $.get("https://api.github.com/users/mortezaipo/repos", function(data) {
+                    $("#projects #load").remove();
                     jQuery.each(data, function(i, v){
                         console.log(v.name);
                         $("#projects").find("tbody")
@@ -12,7 +13,7 @@
                                 .append($("<td>").append(v.name))
                                 .append($("<td>").append(v.description))
                                 .append($("<td>").append(v.updated_at))
-                                .append($("<td>").append(v.html_url))
+                                .append($("<td>").append($("<a>").attr('src',v.html_url)))
                             );
                     });
                 });
@@ -28,6 +29,9 @@
                 <th>Links</th>
             </thead>
             <tbody>
+                <tr id="load">
+                    <td colspan="4">Please wait...</td>
+                </tr>
             </tbody>
         </table>
     </body>
