update sample page.

--- a/hello.html
+++ b/hello.html
@@ -7,13 +7,12 @@
                 $.get("https://api.github.com/users/mortezaipo/repos", function(data) {
                     $("#projects #load").remove();
                     jQuery.each(data, function(i, v){
-                        console.log(v.name);
                         $("#projects").find("tbody")
                             .append($("<tr>")
                                 .append($("<td>").append(v.name))
                                 .append($("<td>").append(v.description))
                                 .append($("<td>").append(v.updated_at))
-                                .append($("<td>").append($("<a>").attr('src',v.html_url)))
+                                .append($("<td>").append($("<a>").attr('href',v.html_url)))
                             );
                     });
                 });
