--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,9 @@
                                 .append($("<td>").append(v.name))
                                 .append($("<td>").append(v.description))
                                 .append($("<td>").append(v.updated_at))
-                                .append($("<td>").append($("<a>").attr('href',v.html_url).text("Source")))
+                                .append($("<td>").append(
+                                    $("<a>").attr('href',v.html_url).html("Source"))
+                                )
                             );
                     });
                 });
