projects file updated.

--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="inc/css/font-awesome.min.css">
         <link rel="stylesheet" href="inc/css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700' rel='stylesheet' type='text/css'>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="inc/js/extra.js"></script>
     </head>
     <body>
         
@@ -47,49 +49,21 @@
                 <div class="col-md-12">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            
-                            <table class="table">
+                            <table class="table" id="projects_list">
                                 <thead>
                                     <th class="col-md-1">Row</th>
                                     <th class="col-md-2">Name</th>
                                     <th>Brief Description</th>
+                                    <!--
                                     <th class="col-md-1">License</th>
                                     <th class="col-md-2">Status</th>
+                                    -->
+                                    <th class="col-md-1">Last Update</th>                                    
                                     <th class="col-md-2">Links</th>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>1</td>
-                                        <td>Sphex ECM</td>
-                                        <td>Enterprise Content Management.</td>
-                                        <td>GPL V2</td>
-                                        <td>
-                                            <div>
-                                                <div class="progress">
-                                                    <div class="progress-bar progress-bar-success" style="width: 80%"></div>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-xs btn-default">Source</a>
-                                            <a href="#" class="btn btn-xs btn-default">Document</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>Game Market</td>
-                                        <td>Online Game Marketing.</td>
-                                        <td>CC V2</td>
-                                        <td>
-                                            <div>
-                                                <div class="progress">
-                                                    <div class="progress-bar progress-bar-warning" style="width: 20%"></div>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <a href="#" class="btn btn-xs btn-default">Source</a>
-                                        </td>
+                                        <td colspan="4">Please wait. Loading...</td>    
                                     </tr>
                                 </tbody>
                             </table>
