projects file updated.

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
                                     <th class="col-md-2">Links</th>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr id="load">
                                         <td colspan="4">Please wait. Loading...</td>    
                                     </tr>
                                 </tbody>
