projects file updated.

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                                     <th class="col-md-1">License</th>
                                     <th class="col-md-2">Status</th>
                                     -->
-                                    <th class="col-md-1">Last Update</th>                                    
+                                    <th class="col-md-1">Updated</th>                                    
                                     <th class="col-md-2">Links</th>
                                 </thead>
                                 <tbody>
