Update javascript file and projects page.

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
 <!doctype html>
 <html>
     <head>
+        <ittle>MortezaIpo | Projects</ittle>
         <link rel="stylesheet" href="inc/css/bootstrap.min.css">
         <link rel="stylesheet" href="inc/css/font-awesome.min.css">
         <link rel="stylesheet" href="inc/css/style.css">
@@ -31,9 +32,9 @@
                 <div class="navbar navbar-default">
                     <ul class="nav navbar-nav">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <!--
                     <form class="navbar-form pull-right">
@@ -59,11 +60,11 @@
                                     <th class="col-md-2">Status</th>
                                     -->
                                     <th class="col-md-1">Updated</th>                                    
-                                    <th class="col-md-2">Links</th>
+                                    <th class="col-md-1">Links</th>
                                 </thead>
                                 <tbody>
                                     <tr id="load">
-                                        <td colspan="4">Please wait. Loading...</td>    
+                                        <td colspan="5">Please wait. Loading...</td>    
                                     </tr>
                                 </tbody>
                             </table>
