--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 <!doctype html>
 <html>
     <head>
-        <ittle>MortezaIpo | Projects</ittle>
+        <title>MortezaIpo | Projects</title>
         <link rel="stylesheet" href="inc/css/bootstrap.min.css">
         <link rel="stylesheet" href="inc/css/font-awesome.min.css">
         <link rel="stylesheet" href="inc/css/style.css">
