Update projects page + javascript and css files.

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                         <div class="panel-body">
                             <table class="table" id="projects_list">
                                 <thead>
-                                    <th class="col-md-1">Row</th>
+                                    <th class="col-md-1 text-center">Row</th>
                                     <th class="col-md-2">Name</th>
                                     <th>Brief Description</th>
                                     <!--
@@ -64,7 +64,7 @@
                                 </thead>
                                 <tbody>
                                     <tr id="load">
-                                        <td colspan="5">Please wait. Loading...</td>    
+                                        <td colspan="5">Please wait... <i class="fa fa-spinner fa-pulse fa-fw"></i></td>    
                                     </tr>
                                 </tbody>
                             </table>
@@ -72,10 +72,10 @@
                         <div class="panel-footer">
                             <div class="row">
                                 <div class="col-md-9">
-                                    <a href="#" class="btn btn-default">Open Up My Github Page</a>
+                                    <a href="https://github.com/Mortezaipo/" target="_blank" class="btn btn-default">Open Up My Github Page</a>
                                 </div>
                                 <div class="col-md-3">
-                                    <label class="last-update">Last update: 12 Jun 2016 at 12:00 AM</label>  
+                                    <label class="last-update"></label>  
                                 </div>
                             </div>
                         </div>
