Project page updated. javascript and css files updated.

--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,8 @@
             <div class="row body">
                 <div class="col-md-12">
                     <div class="panel panel-default">
-                        <div class="panel-body">
-                            <table class="table" id="projects_list">
+                        <div class="panel-body" style="padding: 0 !important;">
+                            <table class="table table-hover" id="projects_list">
                                 <thead>
                                     <th class="col-md-1 text-center">Row</th>
                                     <th class="col-md-2">Name</th>
