Update title part of about page.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>MortezaIpo | Projects</title>
+        <title>MortezaIpo | About</title>
         <link rel="stylesheet" href="inc/css/bootstrap.min.css">
         <link rel="stylesheet" href="inc/css/font-awesome.min.css">
         <link rel="stylesheet" href="inc/css/style.css">
