update first project description.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <legend>Current Projects:</legend>
           <div class="well" style="box-shadow: none !important;">
             <h4><span class="glyphicon glyphicon-star"></span> ugtrain-gui</h4>
-            <p>A graphical user interface for ugtrain project. [C]</p>
+            <p>Graphical user interface software for ugtrain project. [C]</p>
             <div class="progress">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuein="0" aria-valuemax="100" style="width: 20%;">20%</div>
             </div>
