--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,17 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Morteza Nourelahi Alamdari</title>
+    <title>Morteza Nourelahi Alamdari | Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,500,700,900|Pacifico" rel="stylesheet">
     <style>
       .title{ font-family: 'Pacifico', cursive; }
       h3, h4, legend, p{ font-family: 'Arima Madurai', cursive; }
       p{ font-size:19px; }
       legend{ font-weight: bold;}
+      .active-link{ text-decoration: underline; }
     </style>
   </head>
   <body>
@@ -22,23 +24,38 @@
           <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Resume</a></li>
-          <li class="active"><a href="#">Contact</a></li>
+          <li class="active-link"><a href="#">Contact</a></li>
         </ul>
       </nav>
       
       <div>
-      
         <fieldset>
           <legend>Contact:</legend>
           <p>
+            I'd like to contribute in open source projects.
+            Also I accept projects which related to Linux and BSD.
             <h4>You could contact me via:</h4>
-            <ul>
-                <li>Email: mortezaipo [at] gmail [dot] com</li>
-                <li>Skype: morteza.ipo</li>
-                <li>Twitter: @Mortezaipo</li>
-                <li>Mobile-1: +98 921 130 7441</li>
-                <li>Mobile-2: +98 936 175 2529</li>
-            </ul>
+            <table class="table">
+                <tr>
+                    <td class="col-md-1">Email:</td>
+                    <td><span class="badge">mortezaipo [at] gmail [dot] com</span></td>
+                </tr>
+                <tr>
+                    <td>Skype:</td>
+                    <td><span class="badge">morteza.ipo</span></td>
+                </tr>
+                <tr>
+                    <td>Twitter:</td>
+                    <td><span class="badge">@Mortezaipo</span></td>
+                </tr>
+                <tr>
+                    <td>Mobile:</td>
+                    <td>
+                        <span class="badge">+98 921 130 7441</span>
+                        <span class="badge">+98 936 175 2529</span>
+                    </td>
+                </td>
+            </table>
             <br><br>
           </p>
         </fieldset>
