--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Resume</a></li>
-          <li class="active-link"><a href="#">Contact</a></li>
+          <li class="active-link"><a href="/contact">Contact</a></li>
         </ul>
       </nav>
       
