--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-default">
         <ul class="nav navbar-nav">
           <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="/projects">Projects</a></li>
           <li><a href="#">Resume</a></li>
           <li class="active-link"><a href="/contact">Contact</a></li>
         </ul>
