update activity part and projects.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div>
         <h3>Brief Introduction:</h3>
         <p>
-          My name is Morteza. I'm a GNU/Linux software developer. I'd like to implement ideas and solve problems specially in low-level concepts.
-          I write software in C, Go and Python.
+          My name is Morteza. I'm a GNU/Linux software developer. I'd like to implement ideas and solve problems. <!--specially in low-level concepts.-->
+          I write software in Python.
         </p>
       </div>
       
@@ -39,6 +39,7 @@
       
       <div>
         <h3>Activities:</h3>
+        <!--
         <div class="row">
           <div class="col-md-2">
             <h2 class="activity-header">GNU/Linux</h2>
@@ -51,18 +52,7 @@
           </div>
         </div>
         <br>
-        <div class="row">
-          <div class="col-md-2">
-            <h2 class="activity-header">C/Go</h2>
-          </div>
-          <div class="col-md-10">
-            <p class="activity-body">
-              All activities which are in GNU/Linux scope, GTK+ and Linux System programming.
-              Designing and implementing cores and distributed systems.
-            </p>
-          </div>
-        </div>
-        <br>
+        -->
         <div class="row">
           <div class="col-md-2">
             <h2 class="activity-header">Python</h2>
@@ -71,6 +61,19 @@
             <p class="activity-body">
               Designing and implementing services and web based panels.
               Developing commercial and enterprise products for companies. 
+            </p>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-2">
+            <h2 class="activity-header">C/Go</h2>
+          </div>
+          <div class="col-md-10">
+            <p class="activity-body">
+              <!--All activities which are in GNU/Linux scope, -->
+              I'm beginner in this scope. GTK+ and Linux System programming.
+              Designing and implementing cores and distributed systems.
             </p>
           </div>
         </div>
@@ -90,7 +93,7 @@
                 <p>Enterprise Content Management System</p>
                 <small>
                   <span class="label label-danger">Python</span>
-                  <span class="label label-danger">C</span>
+                  <!--<span class="label label-danger">C</span>-->
                 </small>
               </div>
             </div>
@@ -100,7 +103,7 @@
                 <h1>ugtrain-gui</h1>
                 <p>Ugtrain Graphical User Interface</p>
                 <small>
-                  <span class="label label-danger">C</span>
+                  <span class="label label-danger">Python</span>
                 </small>
               </div>
             </div>
@@ -110,7 +113,7 @@
                 <h1>sms-keygen</h1>
                 <p>SMS Keygen For Authentication</p>
                 <small>
-                  <span class="label label-danger">Go</span>
+                  <span class="label label-danger">Python</span>
                 </small>
               </div>
             </div>
@@ -133,7 +136,7 @@
                 <p>SMS Game Generator</p>
                 <small>
                   <span class="label label-danger">Python</span>
-                  <span class="label label-danger">Go</span>
+                  <!--<span class="label label-danger">Go</span>-->
                 </small>
               </div>
             </div>
