Update home page brief description.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <div>
         <h3>Brief Introduction:</h3>
         <p>
-          My name is Morteza. I'm a GNU/Linux software developer. I'd like to implement ideas and solve problems. <!--specially in low-level concepts.-->
-          I write software in Python.
+          My name is Morteza, a GNU/Linux software developer. I'd like to implement ideas and solve problems specially by Python programming language.
         </p>
       </div>
       
