--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
         <h3>Brief Introduction:</h3>
         <p>
-          My name is Morteza, a GNU/Linux software developer. I'd like to implement ideas and solve problems.
+          My name is Morteza, a Python developer. I'd like to implement ideas and solve problems.
         </p>
       </div>
       
@@ -38,41 +38,14 @@
       
       <div>
         <h3>Activities:</h3>
-        <!--
-        <div class="row">
-          <div class="col-md-2">
-            <h2 class="activity-header">GNU/Linux</h2>
-          </div>
-          <div class="col-md-10">
-            <p class="activity-body">
-              All activities in this scope refers to the Kernel Development, Device Drivers,
-              Embeded System and Kernel Debuging.
-            </p>
-          </div>
-        </div>
-        <br>
-        -->
         <div class="row">
           <div class="col-md-2">
             <h2 class="activity-header">Python</h2>
           </div>
           <div class="col-md-10">
             <p class="activity-body">
-              Designing and implementing services and web based panels.
+              Designing and implementing services and panels.
               Developing commercial and enterprise products for companies. 
-            </p>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-md-2">
-            <h2 class="activity-header">C/Go</h2>
-          </div>
-          <div class="col-md-10">
-            <p class="activity-body">
-              <!--All activities which are in GNU/Linux scope, -->
-              I'm beginner in this scope. GTK+ and Linux System programming.
-              Designing and implementing cores and distributed systems.
             </p>
           </div>
         </div>
