Add year in footer.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
       
       <hr>
-      All rights reserved &copy;
+      All rights reserved 2016&copy;
     </div>
     
   </body>
