--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-md-10">
               <p class="activity-body">
-                Creating services and applications for clients.<br>
+                Creating services and applications for servers and clients.<br>
                 Designing graphical user interface (GUI) with GTK, QT and WX. 
               </p>
             </div>
