Update target attr of projects github link.

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
       <div>
         <h3>Open Source Projects:</h3>
         <p>
-          As I love open source activity, you could find my projects in my <strong><a href="https://github.com/Mortezaipo">Github</a></strong>.
+          As I love open source activity, you could find my projects in my <strong><a href="https://github.com/Mortezaipo" target="_blank">Github</a></strong>.
         </p>
       </div>
       
