--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
             <li role="presentation"><a href="projects.html">Projects</a></li>
             <li role="presentation"><a href="cv.html">Resume</a></li>
             <li role="presentation" class="active"><a href="links.html">Links</a></li>
-            <li role="presentation"><a href="contact.html">About</a></li>
+            <li role="presentation"><a href="about.html">About</a></li>
             <li role="presentation"><a href="contact.html">Contact</a></li>
           </ul>
         </div>
