--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         I've prepared this website to force myself to write and share my activities.<br>
         I've tested many programming languages and many fields in computer but at then end of each action I
         returned back to this state: Read more about GNU/Linux, Python and implement ideas in them.<br>
-        I really love Linux Kernel and even I attend in a course about it. But I'm completely beginner in it.
+        I really love Linux Kernel and even I attended in a course about it. But I'm completely beginner in it.
         Right now I spend my times on Data Analysis & Machine Learning topics because these fields would be my future and profession.<br>
         I try to implement my ideas by Python and Erlang in GNU/Linux platform.<br>
         For more information about my activities please have a look into <strong><a href="cv.html">My Resume</a></strong> page.
