Update home page content.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-10">
               <p class="activity-body">
-                Designing and Impelemnting functioanlity for data analysis based on data.<br>
+                Designing and Impelemnting tools, services & panels for data analysis based on data.<br>
                 Apache Spark, Hadoop, Storm, Python & Erlang will be integreted based on requirements.
               </p>
             </div>
