Update all pages to new structure and theme.

--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Morteza Nourelahi Alamdari | Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,500,700,900|Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <link href="extra.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://use.fontawesome.com/531b387394.js"></script>
@@ -33,12 +32,14 @@
       <div>
         <h3>Open Source Projects:</h3>
         <p>
-          As I love open source activity, you could find my projects in my <strong><a href="https://github.com/Mortezaipo" target="_blank">Github</a></strong>.
+          As I love open source activities, you could find my projects in my <strong><a href="https://github.com/Mortezaipo" target="_blank">Github</a></strong> account.
         </p>
       </div>
       
       <hr>
-      
+      <div class="alert alert-warning">
+        <i class="fa fa-exclamation-triangle"></i> <strong>Alert:</strong> Projects are under construction. So it might that you download a source code which doesn't work fine.
+      </div>
       <table class="table table-bordered table-striped" id="projects_list">
         <thead>
           <th class="col-md-1 text-center">Row</th>
