--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Morteza Nourelahi Alamdari | About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,500,700,900|Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <link href="extra.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/531b387394.js"></script>
   </head>
@@ -38,16 +37,21 @@
       <hr>
       
       <div>
-        <div>
-        My name is Morteza Nourelahi Alamdari. I'm back-end programmer. I spend most of the time on programming 
-        and reading books.<br>
-        I've prepared this website to force myself to write and share my activities.<br>
-        I've tested many programming languages and many fields in computer but at then end of each action I
-        returned back to this state: Read more about GNU/Linux, Python and implement ideas in them.<br>
-        I really love Linux Kernel and even I attended in a course about it. But I'm completely beginner in it.
-        Right now I spend my times on Data Analysis & Machine Learning topics because these fields would be my future and profession.<br>
-        I try to implement my ideas by Python and Erlang in GNU/Linux platform.<br>
-        For more information about my activities please have a look into <strong><a href="cv.html">My Resume</a></strong> page.
+        <div class="row">
+          <div class="col-md-2">
+            <img src="1.jpg" class="thumbnail profile-img">
+          </div>
+          <div class="col-md-10">
+          My name is Morteza Nourelahi Alamdari. I'm back-end programmer. I spend most of the time on programming 
+          and reading books.<br>
+          I've prepared this website to force myself to write and share my activities.<br>
+          I've tested many programming languages and many fields in computer but at then end of each action I
+          returned back to this state: Read more about GNU/Linux, Python and implement ideas in them.<br>
+          I really love Linux Kernel and even I attended in a course about it. But I'm completely beginner in it.
+          Right now I spend my times on Data Analysis & Machine Learning topics because these fields would be my future and profession.<br>
+          I try to implement ideas by Python and Erlang in GNU/Linux platform.<br>
+          For more information about my activities please have a look into <strong><a href="cv.html">My Resume</a></strong> page.
+          </div>
         </div>
       <hr>
 
