--- a/cv.html
+++ b/cv.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Morteza Nourelahi Alamdari | Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,500,700,900|Pacifico" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <link href="extra.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/531b387394.js"></script>
   </head>
@@ -39,8 +38,9 @@
       
       <div>
         <div>
-        I would like to recommed you to see my LinkedIn account via this button:
-        <a href="https://www.linkedin.com/in/mortezaipo" class="btn btn-success" target="_blank">My LinkedIn Page</a>
+        I would like to recommed you to see my resume in LinkedIn & Xing accounts via these buttons:
+        <a href="https://www.linkedin.com/in/mortezaipo" class="btn btn-linkedin" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+        <a href="https://www.linkedin.com/in/mortezaipo" class="btn btn-xing" target="_blank"><i class="fa fa-xing-square"></i> Xing</a>
         </div>
       <hr>
 
