Update Xing link.

--- a/cv.html
+++ b/cv.html
@@ -40,7 +40,7 @@
         <div>
         I would like to recommed you to see my resume in LinkedIn & Xing accounts via these buttons:
         <a href="https://www.linkedin.com/in/mortezaipo" class="btn btn-linkedin" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
-        <a href="https://www.linkedin.com/in/mortezaipo" class="btn btn-xing" target="_blank"><i class="fa fa-xing-square"></i> Xing</a>
+        <a href="https://www.xing.com/profile/Morteza_NourelahiAlamdari" class="btn btn-xing" target="_blank"><i class="fa fa-xing-square"></i> Xing</a>
         </div>
       <hr>
 
