Fix wrong words.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <div>
         <h3>About me:</h3>
         <p>
-          A breif introduction about myself.
+          A brief introduction about myself.
         </p>
       </div>
       
