Update content of contact page and style of index page.

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <h3>Contact:</h3>
         <p>
           I'd like to contribute in open source projects.
-          Also I accept projects which related to GNU/Linux and BSD.
+          Also I accept projects with related to my activities.
           <br><hr>
         </p>
         <p>
