--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <div class="well">
         <div class="row">
           <div class="col-md-6">
-            <div class="col-md-3 activity-header right-border">Python</div>
+            <div class="col-md-3 activity-header">Python</div>
             <div class="col-md-9">
               Designing and implementing services and panels. Developing commercial and enterprise products.
               <br><br>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="col-md-3 activity-header right-border">Erlang</div>
+            <div class="col-md-3 activity-header">Erlang</div>
             <div class="col-md-9">
               Designing and implementing high scale services. Developing commercial and enterprise products.
               <br><br>
@@ -57,13 +57,13 @@
         
         <div class="row">
           <div class="col-md-6">
-            <div class="col-md-3 activity-header right-border">Linux</div>
+            <div class="col-md-3 activity-header">GNU/Linux</div>
             <div class="col-md-9">
               Creating services and applications for servers and clients. Designing GUI applications.
             </div>
           </div>
           <div class="col-md-6">
-            <div class="col-md-3 activity-header right-border">Analysis</div>
+            <div class="col-md-3 activity-header">Analysis</div>
             <div class="col-md-9">
               Designing and impelemnting tools, services & panels for data analysis.
             </div>
