Move alert icon to the right side.

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
       
       <hr>
       <div class="alert alert-warning">
-        <i class="fa fa-exclamation-triangle"></i> <strong>Alert:</strong> Projects are under construction. So it might that you download a source code which doesn't work fine.
+        <i class="fa fa-exclamation-triangle pull-right"></i> <strong>Alert:</strong> Projects are under construction. So it might that you download a source code which doesn't work fine.
       </div>
       <table class="table table-bordered table-striped" id="projects_list">
         <thead>
