Update wrong keyword.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-md-6">
             <div class="col-md-3 activity-header">Analysis</div>
             <div class="col-md-9">
-              Designing and impelemnting tools, services & panels for data analysis.
+              Designing and implementing tools, services & panels for data analysis.
             </div>
           </div>
         </div>        
