Change Erlang to C/C++.

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           returned back to this state: Read more about GNU/Linux, Python and implement ideas in them.<br>
           I really love Linux Kernel and even I attended in a course about it. But I'm completely beginner in it.
           Right now I spend my times on Data Analysis & Machine Learning topics because these fields would be my future and profession.<br>
-          I try to implement ideas by Python and Erlang in GNU/Linux platform.<br>
+          I try to implement ideas by Python and C/C++ in GNU/Linux platform.<br>
           For more information about my activities please have a look into <strong><a href="cv.html">My Resume</a></strong> page.
           </div>
         </div>
