--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="col-md-3 activity-header">Erlang</div>
+            <div class="col-md-3 activity-header">C/C++</div>
             <div class="col-md-9">
-              Designing and implementing high scale services. Developing commercial and enterprise products.
+              Designing and implementing high performance services. Developing commercial and enterprise products.
               <br><br>
             </div>
           </div>
