Removed 'C++' from website.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="col-md-3 activity-header">C/C++</div>
+            <div class="col-md-3 activity-header">C</div>
             <div class="col-md-9">
               Designing and implementing high performance services. Developing commercial and enterprise products.
               <br><br>
