--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           </div>
           <div class="col-md-3">
             <a href="#" class="contact-link" target="_blank">
-              <h1><i class="fa fa-youtube-square"></i></h1>
-              <p>Youtube</p>
+              <h1><i class="fa fa-medium"></i></h1>
+              <p>Medium</p>
             </a>
           </div>
         </div>
