--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://twitter.com/mortezaipo" class="contact-link" target="_blank">
-              <h1><i class="fa fa-twitter-square"></i></h1>
-              <p>Twitter</p>
+            <a href="https://medium.com/@mortezaipo" class="contact-link" target="_blank">
+              <h1><i class="fa fa-medium"></i></h1>
+              <p>Medium</p>
             </a>
           </div>
           <div class="col-md-3">
@@ -83,9 +83,9 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="#" class="contact-link" target="_blank">
-              <h1><i class="fa fa-youtube-square"></i></h1>
-              <p>Youtube</p>
+            <a href="https://twitter.com/mortezaipo" class="contact-link" target="_blank">
+              <h1><i class="fa fa-twitter-square"></i></h1>
+              <p>Twitter</p>
             </a>
           </div>
         </div>
