--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="https://twitter.com/mortezaipo" class="contact-link" target="_blank">
-              <h1><i class="fa fa-twitter-square"></i></h1>
-              <p>Twitter</p>
+            <a href="https://medium.com/@mortezaipo" class="contact-link" target="_blank">
+              <h1><i class="fa fa-medium"></i></h1>
+              <p>Medium</p>
             </a>
           </div>
           <div class="col-md-3">
@@ -94,9 +94,9 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="#" class="contact-link" target="_blank">
-              <h1><i class="fa fa-medium"></i></h1>
-              <p>Medium</p>
+            <a href="https://twitter.com/mortezaipo" class="contact-link" target="_blank">
+              <h1><i class="fa fa-twitter-square"></i></h1>
+              <p>Twitter</p>
             </a>
           </div>
         </div>
