Remove 'squre' style from footer icons.

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
         <div class="row center">
           <div class="col-md-3">
             <a href="https://ir.linkedin.com/in/mortezaipo" class="contact-link" target="_blank">
-              <h1><i class="fa fa-linkedin-square"></i></h1>
+              <h1><i class="fa fa-linkedin"></i></h1>
               <p>LinkedIn</p>
             </a>
           </div>
@@ -73,13 +73,13 @@
           </div>
           <div class="col-md-3">
             <a href="https://github.com/mortezaipo" class="contact-link" target="_blank">
-              <h1><i class="fa fa-github-square"></i></h1>
+              <h1><i class="fa fa-github"></i></h1>
               <p>Github</p>
             </a>
           </div>
           <div class="col-md-3">
             <a href="https://twitter.com/mortezaipo" class="contact-link" target="_blank">
-              <h1><i class="fa fa-twitter-square"></i></h1>
+              <h1><i class="fa fa-twitter"></i></h1>
               <p>Twitter</p>
             </a>
           </div>
