Remove table-bordered class from projects table.

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
       <div class="alert alert-warning">
         <i class="fa fa-exclamation-triangle pull-right"></i> <strong>Alert:</strong> Projects are under construction. So it might that you download a source code which doesn't work fine.
       </div>
-      <table class="table table-bordered table-striped" id="projects_list">
+      <table class="table table-striped" id="projects_list">
         <thead>
           <th class="col-md-1 text-center">Row</th>
           <th class="col-md-2">Name</th>
