--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="Mortezaipo,Morteza,Nourelahi,Alamdari,Ipo,Programming,Developing,Linux,GNU,Python,C,C++,Kernel,Project">
     <meta name="author" content="Morteza Nourelahi Alamdari">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <link href="extra.css" rel="stylesheet">
