--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
           <table class="table">
               <tr>
                   <td class="col-md-1">Email:</td>
-                  <td><span class="badge badge-s1">mortezaipo [at] gmail [dot] com</span></td>
+                  <td><span class="badge badge-s1">me [at] mortezaipo [dot] com</span></td>
               </tr>
               <tr>
                   <td>Skype:</td>
