--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
               <li><a href="cv.html">Resume</a></li>
               <li><a href="links.html">Links</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="active navbar-last-item"><a href="contact.html">Contact</a></li>
+              <li class="active navbar-item-fill"><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
