--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,19 @@
           <h4>Feel free to contact me:</h4>
           
           <form method="post" id="cform" action="https://script.google.com/macros/s/AKfycbz43wLSyHEMmqnw_WU6XNRNyFc7_L8_MrehvDa56DMm7PvZu9w/exec">
+            <div class="form-group">
+                <label for="id_name">Name</label>
+                <input type="text" id="id_name" name="name">
+            </div>
+            <div class="form-group">
+                <label for="id_message">Message</label>
+                <input type="text" id="id_message" name="message">
+            </div>
+            <div class="form-group">
+                <label for="id_email">Email</label>
+                <input type="text" id="id_email" name="email">
+            </div>
+            <button type="submit" class="btn btn-success">Send</button>
           </form>
           
           <table class="table">
