--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,11 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://use.fontawesome.com/531b387394.js"></script>
     <script src="extra.js"></script>
+    <script>
+    $(document).ready(function(){
+        load_projects();
+    });
+    </script>
   </head>
   <body>
     
