Add contact form. Update website extra js.

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <script>
     $("#sendform").click(function(){
         submit_contact_form();
+        return false;
     });
     </script>
   </head>
