Add contact form. Update website extra js.

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
       <div>    
           <div class="row" id="contact_div">
             <div class="col-md-6">
-              <form method="post" id="cform" action="https://script.google.com/macros/s/AKfycbz43wLSyHEMmqnw_WU6XNRNyFc7_L8_MrehvDa56DMm7PvZu9w/exec">
+              <form method="post" id="cform" action="#">
                 <div class="form-group">
                   <label for="id_name">Name</label>
                   <input type="text" id="id_name" name="name" placeholder="Name" class="form-control">
