Add contact form. Update website extra js.

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                   <label for="id_email">Email</label>
                   <input type="text" id="id_email" name="email" placeholder="Email" class="form-control">
                 </div>
-                <button type="submit" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
+                <button type="button" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
               </form>
             </div>
           </div>
