--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
     <script>
     $("#sendform").click(function(){
         submit_contact_form();
-        return false;
     });
     </script>
   </head>
@@ -70,7 +69,7 @@
                   <label for="id_email">Email</label>
                   <input type="text" id="id_email" name="email" placeholder="Email" class="form-control">
                 </div>
-                <button type="button" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
+                <button type="button" id="sendform" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
               </form>
             </div>
           </div>
