Add contact form. Update website extra js.

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <link href="extra.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/531b387394.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="extra.js"></script>
     <script>
     $("#sendform").click(function(){
         submit_contact_form();
