--- a/contact.html
+++ b/contact.html
@@ -59,25 +59,25 @@
       <br>
       
       <div>    
-          <div class="row" id="contact_div">
-            <div class="col-md-6">
-              <div class="well well-p">
-                <form method="post" id="cform" action="#">
-                  <div class="form-group">
+          <div class="well" id="contact_div">
+            <div class="well-p">
+              <form method="post" id="cform" action="#">
+                <div class="row">
+                  <div class="form-group col-md-6">
                     <label for="id_name">Name</label>
                     <input type="text" id="id_name" name="name" placeholder="Name" class="form-control">
                   </div>
-                  <div class="form-group">
-                    <label for="id_message">Message</label>
-                    <textarea id="id_message" name="message" placeholder="Message" class="form-control"></textarea>
-                  </div>
-                  <div class="form-group">
+                  <div class="form-group col-md-6">
                     <label for="id_email">Email</label>
                     <input type="text" id="id_email" name="email" placeholder="Email" class="form-control">
                   </div>
-                  <button type="button" id="sendform" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
-                </form>
-              </div>
+                </div>
+                <div class="form-group">
+                  <label for="id_message">Message</label>
+                  <textarea id="id_message" name="message" placeholder="Message" class="form-control"></textarea>
+                </div>
+                <button type="button" id="sendform" class="btn btn-success"><i class="fa fa-envelope"></i> Send</button>
+              </form>
             </div>
           </div>
           
