--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
         <div class="col-md-5 menu-bar">
           <div class="navbar navbar-default">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="cv.html">Resume</a></li>
+              <li><a href="https://mortezaipo.blogspot.com/">Blog</a></li>
               <li><a href="links.html">Links</a></li>
               <li><a href="about.html">About</a></li>
               <li class="active navbar-item-fill"><a href="contact.html">Contact</a></li>
