--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
   <head>
     <title><$BlogPageTitle$></title>
     <$BlogMetaData$>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rochester|Sacramento" rel="stylesheet">
     <script src="https://use.fontawesome.com/531b387394.js"></script>
@@ -18,6 +19,9 @@
     .comments-block{ margin-bottom: 5px; border-bottom: 1px solid #E5E5E5; }
     .center, .center div{ text-align: center; }
     hr { border-top: 1px solid #D7DCDD !important; margin:0 !important; }
+    footer { padding: 22px 10px; }
+    .left { text-align: left; }
+    .right { text-align: right; }
   </style>
   <body>
     <div class="container">
@@ -80,29 +84,22 @@
                 <$BlogItemCreate$>
               </p>
               <p id="postfeeds"><$BlogItemFeedLinks$></p>
-            </BlogItemCommentsEnabled>	    
-
+            </BlogItemCommentsEnabled>
 	          <p style="padding-left:20px;">
               <a href="<$BlogURL$>">&lt;&lt; <$I18NHome$></a>
             </p>
           </div>
         </ItemPage>
+        <hr>
       </Blogger>
       
-      <hr>
-      
+      <br>
       <div>
         <div class="row center">
           <div class="col-md-1">
             <a href="https://ir.linkedin.com/in/mortezaipo" class="contact-link" target="_blank">
               <h4><i class="fa fa-linkedin"></i></h4>
               <p>LinkedIn</p>
-            </a>
-          </div>
-          <div class="col-md-1">
-            <a href="https://medium.com/@mortezaipo" class="contact-link" target="_blank">
-              <h4><i class="fa fa-medium"></i></h4>
-              <p>Medium</p>
             </a>
           </div>
           <div class="col-md-1">
